--- a/Frontend Development/Day2/index.html
+++ b/Frontend Development/Day2/index.html
@@ -45,12 +45,7 @@
     <hr />
     <section>
       <div>
-        <h6>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
-          repudiandae enim atque provident omnis consectetur, obcaecati eaque.
-          Voluptas, officiis vitae atque laboriosam deserunt perspiciatis odit
-          aperiam maxime ut, voluptatem vel?
-        </h6>
+        <h6>Changes Goes Here</h6>
       </div>
     </section>
 
