--- a/Frontend Development/Day3/index.html
+++ b/Frontend Development/Day3/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1 class="hello-text" id="hello-text">Hello Day 3</h1>
+    <h1 class="hello-text" id="hii-text">Hello Day 3</h1>
 
     <div class="main-div">
       <p>
