Select option and images

--- a/Frontend Development/Day3/index.html
+++ b/Frontend Development/Day3/index.html
@@ -18,6 +18,12 @@
       </p>
     </div>
 
+    <select>
+      <option value="Football">Football</option>
+      <option value="Cricket">Cricket</option>
+      <option value="Tennis">Tennis</option>
+    </select>
+
     <section id="section1">
       <h2>Hello</h2>
     </section>
@@ -25,5 +31,10 @@
     <div>
       <h2>Good</h2>
     </div>
+
+    <img
+      src="https://www.wwe.com/f/2023/04/20230420_WWEChampionEver_2023update_thumb_(1)--9ba6a48e647e24432b2575c44c6e396d.jpg"
+      alt="wwe"
+    />
   </body>
 </html>
