--- a/Frontend Development/Day3/index.html
+++ b/Frontend Development/Day3/index.html
@@ -7,20 +7,24 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1 class="hello-text" id="hii-text">Hello Day 3</h1>
-
-    <div class="main-div">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
-        ea! Incidunt facilis nostrum, deserunt fugiat atque sit libero
-        consectetur, eos architecto dignissimos, harum quia. Molestiae nemo
-        provident harum aliquam?
-      </p>
-    </div>
-
+    <body>
+      <h1 class="hello-text" id="hii-text">Hello Day 3</h1>
+  
+      <div class="main-div">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
+          ea! Incidunt facilis nostrum, deserunt fugiat atque sit libero
+          consectetur, eos architecto dignissimos, harum quia. Molestiae nemo
+          provident harum aliquam?
+        </p>
+      </div>
+         
     <section id="section1">
       <h2>Hello</h2>
     </section>
+     <section id="section2">
+      <img src="https://m.media-amazon.com/images/M/MV5BMTI5MDkwNTcyN15BMl5BanBnXkFtZTcwODYxMjE2MQ@@._V1_.jpg" alt="wwe">
+     </section>
 
     <div>
       <h2>Good</h2>
