frontend7:Create a banner with text and image using css

--- a/Frontend Development/Day3/anik/index.html
+++ b/Frontend Development/Day3/anik/index.html
@@ -8,30 +8,13 @@
 </head>
 <body>
   <h1 class="hello-text" id="hii-text">wwe</h1>
-  <img src="https://m.media-amazon.com/images/M/MV5BMTI5MDkwNTcyN15BMl5BanBnXkFtZTcwODYxMjE2MQ@@._V1_.jpg" alt="wwe"
-  style="float: right; margin-left:10px; margin-bottom:10px;">
+  <img src="https://m.media-amazon.com/images/M/MV5BMTI5MDkwNTcyN15BMl5BanBnXkFtZTcwODYxMjE2MQ@@._V1_.jpg" alt="wwe"/>
 
-
-  <img src="https://m.media-amazon.com/images/M/MV5BMTI5MDkwNTcyN15BMl5BanBnXkFtZTcwODYxMjE2MQ@@._V1_.jpg" alt="wwe"
-  style="float: left; margin-right:20px; margin-bottom:20px;">
+    <span>WWE Royal Rumble.World Wrestling Entertainment.</span>
+  <img src="https://m.media-amazon.com/images/M/MV5BMTI5MDkwNTcyN15BMl5BanBnXkFtZTcwODYxMjE2MQ@@._V1_.jpg" alt="wwe"/>
     
-
-  <section id="section1">
-    <h2>WWE royal rumble</h2>
-  </section>
-
-
-
-  <div class="main-div">
-    <p> World Wrestling Entertainment, Inc., d/b/a WWE, is an American professional wrestling promotion.
-      A global integrated media and entertainment company, WWE has also branched out into other fields, including film, football,
-       and various other
-      business ventures. 
-     </p>
-    </div>
   
   
-
   
 </body>
 </html>
