frontend10: Use scss to design the moviebazar site

--- a/Frontend Development/Day7/anik/index.html
+++ b/Frontend Development/Day7/anik/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 7</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     
 
 
-    <div class="card">
+    <div class="card card-2">
         <div class="card-image"> <img src="https://filmfare.wwmindia.com/content/2022/jun/jawaan41654408101.jpg" alt="image"></div>
         <div class="card-image"> <img src="https://filmfare.wwmindia.com/content/2022/jun/jawaan41654408101.jpg" alt="image"></div>
         <div class="card-image"> <img src="https://filmfare.wwmindia.com/content/2022/jun/jawaan41654408101.jpg" alt="image"></div>
