Implement modal assignment

--- a/Frontend Development/Day15/anik/index.html
+++ b/Frontend Development/Day15/anik/index.html
@@ -1,27 +1,33 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<link rel="stylesheet" href="style.css" />
-<body>
-    <nav><img src="https://thumbs.dreamstime.com/b/vegetables-shopping-cart-trolley-grocery-logo-icon-design-vector-171090350.jpg" alt="logo">
-        <ul>
-            <li><a href="#">Home</a></li>
-          </ul>
-    
+  </head>
+  <link rel="stylesheet" href="style.css" />
+  <body>
+    <nav>
+      <img
+        src="https://thumbs.dreamstime.com/b/vegetables-shopping-cart-trolley-grocery-logo-icon-design-vector-171090350.jpg"
+        alt="logo"
+      />
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#" class="product">Products</a></li>
+      </ul>
     </nav>
     <div id="main" class="main">Hello</div>
 
-    <button class="button">Press Me</button>
-
     <div class="modal">
-      <p>Modal...</p>
-      <button class="button2">close</button>
+      <ul>
+        <li><a href="#">Noodles</a></li>
+        <li><a href="#">Coca Cola</a></li>
+        <li><a href="#">Pringles</a></li>
+        <li><a href="#">Mountain Dew</a></li>
+      </ul>
+      <button class="close">x</button>
     </div>
 
     <script src="index.js"></script>
-    
-</body>
+  </body>
 </html>
